k8s/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: price-runner
  labels:
    app: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: keycloak
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: price-runner
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:latest
          args: ["start-dev"]
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /keycloak/realms/master
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /keycloak/realms/master
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
